<resources>
    <string name="app_name">Restaurateur</string>
    <string name="InfoTitle">Information</string>
    <string name="default_user_name">Insert username</string>
    <string name="default_user_email">Insert email</string>
    <string name="default_user_description">Insert description</string>
    <string name="default_user_phone_number">Insert phone number</string>
    <string name="default_user_address">Insert user address</string>
    <string name="default_opening_hours">Select opening hours</string>
    <string name="default_delivery_service">Delivery info</string>
    <string name="default_user_notification">Insert notification </string>
    <string name="name_field_id">user_name</string>
    <string name="email_field_id">user_email</string>
    <string name="phone_number__field_id">user_phone_number</string>
    <string name="description_field_id">user_description</string>
    <string name="address_field_id">user_address</string>
    <string name="notification_field_id">user_notification</string>
    <string name="opening_hours_field_id">opening_hours</string>
    <string name="delivery_service_field_id">delivery_service</string>
    <string name="pwd_field_id">user_password</string>
    <string name="username_title">Username</string>
    <string name="email_title">Email</string>
    <string name="phone_number_title">Phone number</string>
    <string name="description_title">Description</string>
    <string name="address_title">Address</string>
    <string name="notification_title">Notification</string>
    <string name="opening_hours_title">Opening hours</string>
    <string name="delivery_info_title">Delivery Info</string>
    <string name="insert_username">Type your username</string>
    <string name="insert_email">Type your email address</string>
    <string name="insert_phone_number">Type your phone number</string>
    <string name="insert_description">Type a short description about you</string>
    <string name="insert_address">Type your address</string>
    <string name="insert_notification">Type your notification</string>
    <string name="insert_opening_hours">Type your opening hours</string>
    <string name="insert_delivery_info">Type your delivery info</string>
    <string name="viewMore">Show restaurant</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">CANCEL</string>
    <string name="remove_restaurant">Remove restaurant</string>
    <string name="password_title">Change Password</string>
    <string name="insert_old_password">Insert your actual password</string>
    <string name="insert_password">Insert the new password</string>
    <string name="repeat_password">Repeat the password</string>
    <string name="invalid_password">Invalid password! It must contain capital letter and number, and must have at least 8 characters</string>
    <string name="different_password">The two password are different</string>
    <string name="select_photo">Select photo</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="pick_from_gallery">Pick from gallery</string>
    <string name="cancel_string">Cancel</string>
    <string name="image_disappear">The selected image is no longer available</string>
    <string name="perm_needed">Permission needed</string>
    <string name="perm_why_1">This permission is needed to pick a photo from gallery</string>
    <string name="perm_why_2">This permission is needed to take photo</string>
    <string name="ok_string">OK</string>
    <string name="perm_denied">Permission Denied</string>
    <string name="action_settings">Information</string>
    <string name="button_reservation_accept">Accept</string>
    <string name="button_reservation_reject">Reject</string>
    <string name="button_reservation_finish">Finish</string>
    <string name="button_reservation_resume">Resume</string>
    <string name="button_reservation_remove">Remove</string>
    <string name="total_income_info">Total income </string>
    <string name="notes">notes!</string>
    <string name="reservation_title">Reservations</string>
    <string name="accepted_label">In progress</string>
    <string name="pending_label">Pending</string>
    <string name="refused_label">Finished</string>
    <string name="reservation_details_title">Reservation details</string>
    <string name="remarks">Notes</string>
    <string name="offers_title">Offers</string>
    <string name="active_label">Active</string>
    <string name="disabled_label">Disabled</string>
    <string name="history_title">History</string>
    <string name="home_title">Home</string>
    <string name="button_save">Save</string>
    <string name="add_new_category">Insert the name of the new category</string>
    <string name="new_category_title">Add new category</string>
    <string name="invalid_category">Invalid category</string>
    <string name="title_new_food">Add food offer</string>
    <string name="no_dishes_offers">There are no dishes in this category</string>
    <string name="no_category_offers">There is no category</string>
    <string name="FoodPic">Food Pictrue</string>
    <string name="FoodQuantityValue">35</string>
    <string name="FoodPriceValue">10</string>
    <string name="FoodName">Food Name</string>
    <string name="FoodCategory">Insert category</string>
    <string name="FoodQuantity">Quantity</string>
    <string name="FoodPrice">Price</string>
    <string name="futureDevelopment">For future Development....</string>
    <string name="hint_food_short_description">short description</string>
    <string name="str_orderid">124</string>
    <string name="str_time">15min</string>
    <string name="str_income">10</string>
    <string name="str_foodName">Pizza margherita</string>
    <string name="str_number">x1</string>
    <string name="str_foodprice">5€</string>
    <string name="str_remark">do not put so much chilly this is a notice you can write as many words as you want plesae leave more notice here</string>
    <string name="str_customer_name">Mr Wrong</string>
    <string name="str_phonenumber">33456832901</string>
    <string name="str_messagecustomer">messageCustomer</string>
    <string name="str_callcustonmer">callCustonmer</string>
    <string name="title_activity_edit_dishes">EditDishesActivity</string>
    <string name="show_dish">Edit dish</string>
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed!</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="action_settings_firebase">Firebase Account</string>
    <string name="total_num_products">Total Number Of Products</string>
    <string name="edit_category_item">Edit</string>
    <string name="remove_category_item">Remove</string>
    <string name="edit_category_title">Edit category</string>
    <string name="snackbar_category_removed">Category removed</string>
    <string name="snackbar_category_edited">Category modified</string>
    <string name="snackbar_category_undo">UNDO</string>
    <string name="remove_offer_item">Remove</string>
    <string name="snackbar_offer_remove">Offer removed</string>
    <string name="snackbar_offer_undo">UNDO</string>
    <string name="snackbar_offer_category_changed">Offer moved to category</string>
    <string name="alert_dialog_offer_remove">Do you really want to remove offer</string>
    <string name="alert_dialog_offer_remove_btn_ok">OK</string>
    <string name="alert_dialog_offer_remove_btn_cancel">CANCEL</string>
    <string name="success">Success</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_downloading">Downloading…</string>
    <string name="progress_auth">Signing In…</string>
    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>
    <string name="sign_in_anonymously">Sign In</string>
    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>
    <string name="sign_in_prompt">Sign In to begin</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="download">Download</string>
    <string name="camera_button_text">Upload</string>
    <string name="label_link">Link to Uploaded File</string>
    <string name="label_download">Download File</string>
    <string name="restaurant_address">Restaurant\'s Address</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_descr">Restaurant Description</string>
    <string name="biker_name">Biker name</string>
    <string name="biker_phone">Phone number</string>
    <string name="biker_description">Your description</string>
    <string name="username_updated">Username is updated.</string>
    <string name="username_failed_update">Failed to update username!</string>
    <string name="invalid_username">Invalid username. Use minimum 3 characters</string>
    <string name="email_updated">Email address is updated. Please sign in with new email id!</string>
    <string name="email_failed_updated">Failed to update email!</string>
    <string name="phone_updated">Phone number is updated.</string>
    <string name="phone_failed_updated">Failed to update phone number!</string>
    <string name="invalid_mail">Enter valid email address!</string>
    <string name="invalid_phone">Invalid phone number</string>
    <string name="enter_email">Enter email address!</string>
    <string name="became_biker">Became a biker!</string>
    <string name="became_biker2">Do you want to became a biker?</string>
    <string name="welcome_biker">Welcome among bikers!</string>
    <string name="logout_title">Log out</string>
    <string name="password_failed_updated">Failed to update password!</string>
    <string name="profile_created">Your profile is created!</string>
    <string name="complete_rest_btn">Complete registration</string>
    <string name="your_rest_title">Your restaurant</string>
    <string name="user_name">Username</string>
    <string name="sign_up">Sign up</string>
    <string name="default_rest_name">Restaurant name</string>
    <string name="rest_description">Restaurant\'s description</string>
    <string name="delivery_fee_title">Delivery fee</string>
    <string name="rest_tags_title">Restaurant\'s tag</string>
    <string name="title_activity_modify_rest_info">ModifyRestInfoActivity</string>
    <string name="insert_delivery_fee">Insert how much costs the delivery</string>
</resources>