<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/offer_item_cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/linearLayoutOffer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp">

            <ImageView
                android:id="@+id/offer_food_pic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/FoodPic"
                android:src="@drawable/img_rest_1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutOfferData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dp16">

            <LinearLayout
                android:id="@+id/linearLayoutOfferQuantityPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/offer_food_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FoodName"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:ellipsize="end"
                    android:maxLines="2"/>

                <Switch
                    android:id="@+id/offerStateSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/textViewPriceOffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FoodPrice"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />

                <TextView
                    android:id="@+id/textViewPriceOfferValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/FoodPriceValue"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                    android:layout_marginStart="16dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewQuantityOffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/FoodQuantity"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2" />

                <TextView
                    android:id="@+id/textViewQuantityOfferValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/FoodQuantityValue"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:layout_marginStart="16dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>