<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Information.ViewMoreInfoActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp">

        <RelativeLayout
            android:id="@+id/relativeLayoutFoodPic"
            android:layout_width="match_parent"
            android:layout_height="156dp"
            android:layout_marginTop="@dimen/dp8"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/activity_padding"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/offer_food_pic_e"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_marginTop="@dimen/activity_padding"
                android:layout_marginBottom="@dimen/activity_padding"
                android:scaleType="fitXY"
                android:src="@drawable/img_rest_1"
                android:contentDescription="@string/FoodPic" />
            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/background_img"
                android:layout_width="48sp"
                android:layout_height="48sp"
                android:layout_alignBottom="@id/offer_food_pic"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:scaleType="centerInside"
                android:src="@drawable/background"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="2sp"
                app:civ_shadow="true"
                app:civ_shadow_radius="1"
                tools:ignore="NotSibling" />
            <ImageView
                android:id="@+id/img_plus"
                android:layout_width="43sp"
                android:layout_height="44sp"
                android:layout_alignStart="@+id/background_img"
                android:layout_alignLeft="@+id/background_img"
                android:layout_alignTop="@+id/background_img"
                android:layout_alignEnd="@+id/background_img"
                android:layout_alignRight="@+id/background_img"
                android:layout_alignBottom="@+id/background_img"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:contentDescription="@string/app_name"
                android:cropToPadding="false"
                android:src="@drawable/ic_camera"
                android:tint="@android:color/white" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutFoodName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayoutFoodPic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/dp16">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_food_name_e"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_input_food_name_e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/FoodName"
                    android:gravity="start|top"
                    android:inputType="textCapSentences"
                    android:focusable="true"
                    android:nextFocusDown="@+id/edit_text_input_food_price_e"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:baselineAligned="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_food_price"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_input_food_price_e"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/FoodPrice"
                        android:gravity="start|top"
                        android:inputType="numberDecimal"
                        android:lines="1"
                        android:focusable="true"
                        android:nextFocusDown="@+id/edit_text_input_food_quantity_e"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_food_quantity"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_input_food_quantity_e"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/FoodQuantity"
                        android:gravity="start|top"
                        android:inputType="number"
                        android:lines="1"
                        android:focusable="true"
                        android:nextFocusDown="@+id/edit_text_input_food_description_e"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_food_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:nextFocusDown="@+id/etOfferBtnSave">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_text_input_food_description_e"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_food_short_description"
                    android:gravity="start|top"
                    android:inputType="textCapSentences" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/Button_Area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp24"
                android:layout_marginBottom="@dimen/dp24"
                >
                <Button
                    android:id="@+id/etOfferBtnCancel_e"
                    android:theme="@style/PrimaryFlatButton"
                    android:layout_marginRight="4dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel_button"
                    android:layout_marginEnd="4dp"
                    style="?android:attr/borderlessButtonStyle"/>
                <Button
                    android:id="@+id/etOfferBtnSave_e"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:theme="@style/PrimaryFlatButton"
                    android:textColor="@color/colorSecondaryText"
                    android:layout_marginLeft="4dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/button_save"
                    android:layout_marginStart="4dp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>